CSS: fix overlaying text on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,7 @@ body {
 
 .flex-group {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.75rem;
 }
 
