--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -91,6 +91,7 @@ body {
 
 .flex-group {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 0.75rem;
 }
 
